--- a/YingCaiAi/YingCaiAiWin/Views/Pages/AIWindows.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/AIWindows.xaml
@@ -135,7 +135,7 @@
                              IsReadOnlyCaretVisible="False"
                              VerticalScrollBarVisibility="Auto"
                              FontSize="14"
-                             Foreground="{DynamicResource TextFillColorSecondaryBrush}" />
+                             Foreground="{DynamicResource  DarkPrimaryBrush}" />
                                                     </ScrollViewer>
                                                 </StackPanel>
                                                 <Button Content="✕" Grid.Column="2"
@@ -288,12 +288,20 @@
 
             <!-- 底部搜索栏 -->
             <ui:Card Grid.Row="3" Background="#4285F4" Margin="10,0,10,10" Padding="10">
-                <ui:TextBox x:Name="SearchBox" PlaceholderText="请输入搜索关键字，回车搜索" 
+                <ui:TextBox x:Name="SearchBox" PlaceholderText="请输入搜索关键字，回车搜索"  Height="40"
                            Icon="Search24" 
                            VerticalAlignment="Center" 
                            Background="White"
-                           KeyDown="SearchBox_KeyDown" />
+                             AcceptsReturn="True" 
+                             TextWrapping="Wrap" 
+                            VerticalScrollBarVisibility="Auto"
+                            
+                            MaxLength="2147483647"
+                     
+                            PreviewKeyDown="SearchBox_PreviewKeyDown"
+                            />
             </ui:Card>
         </Grid>
     </Grid>
 </Page>
+<!--KeyDown="SearchBox_KeyDown"-->
