--- a/YingCaiAi/YingCaiAiWin/Views/Pages/Customers.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/Customers.xaml
@@ -153,7 +153,7 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="职位"  Binding="{Binding Contacts}" Width="120"  >
+                        <DataGridTextColumn Header="职位"  Binding="{Binding JobTitle}" Width="120"  >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
@@ -191,7 +191,13 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-
+                        <DataGridTextColumn Header="介绍"  Binding="{Binding Intro}" Width="120"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
                         <DataGridTemplateColumn Header="操作" Width="120">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
