--- a/YingCaiAi/YingCaiAiWin/Views/Pages/TrainingDataPage.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/TrainingDataPage.xaml
@@ -34,6 +34,8 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
                 <hc:SearchBar
@@ -43,7 +45,7 @@
                     Margin="0,0,12,0"
                     Width="250"
                     Height="40"
-                     Text="{Binding ViewModel.TrainingDataSearch.Question }"
+                     Text="{Binding ViewModel.TrainingDataSearch.Instruction }"
                     />
 
                 <hc:ComboBox
@@ -79,6 +81,24 @@
                   hc:IconElement.Width="16"
                   Margin="10,0,12,0"
                   Command="{Binding ViewModel.OpenFileCommand}" />
+                <Button 
+             Grid.Column="5" 
+             Content="审核" 
+             Width="100"
+              Height="40"
+             Style="{StaticResource ButtonPrimary}"
+             hc:IconElement.Width="16"
+             Margin="10,0,12,0"
+             Command="{Binding ViewModel.ApproveStatusCommand}" />
+                <Button 
+      Grid.Column="6" 
+      Content="删除" 
+      Width="100"
+       Height="40"
+      Style="{StaticResource ButtonPrimary}"
+      hc:IconElement.Width="16"
+      Margin="10,0,12,0"
+    Command="{Binding ViewModel.DeleteCommand}" />
 
             </Grid>
 
@@ -106,9 +126,29 @@
 
 
                     <DataGrid.Columns>
+                        
                         <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="60" Visibility="Hidden" />
+                        <!-- ✅ 复选框列：用户选择 -->
 
-                        <DataGridTextColumn Header="问题" Binding="{Binding Question}" Width="*" >
+                        <DataGridTemplateColumn Width="60">
+                            <DataGridTemplateColumn.Header>
+                                <CheckBox
+                                        IsChecked="{Binding ViewModel.IsAllSelected,RelativeSource={RelativeSource AncestorType=local:TrainingDataPage}}"
+                                        Command="{Binding ViewModel.ALLCheckChangedCommand ,RelativeSource={RelativeSource AncestorType=local:TrainingDataPage}}"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"  />
+                               
+                            </DataGridTemplateColumn.Header>
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay}"
+                Command="{Binding ViewModel.CheckChangedCommand ,RelativeSource={RelativeSource AncestorType=local:TrainingDataPage}}"
+                CommandParameter="{Binding Id}"  />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+
+                        <DataGridTextColumn Header="系统提示词" Binding="{Binding System}" Width="*" >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
@@ -116,7 +156,16 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Header="答案"  Binding="{Binding Answer}" Width="*"  >
+                        <DataGridTextColumn Header="问题"  Binding="{Binding Instruction}" Width="*"  >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                    <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+                                    <Setter Property="TextWrapping" Value="NoWrap"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="答案"  Binding="{Binding Output}" Width="*"  >
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="VerticalAlignment" Value="Center" />
@@ -140,8 +189,15 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
+                        <DataGridTextColumn Header="训练时间" Binding="{Binding EditAt, StringFormat=yyyy-MM-dd HH:mm}"  Width="120" >
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="VerticalAlignment" Value="Center" />
 
-                        <DataGridTemplateColumn Header="操作" Width="120">
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <!--<DataGridTemplateColumn Header="操作" Width="120">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
@@ -167,7 +223,7 @@
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
+                        </DataGridTemplateColumn>-->
                     </DataGrid.Columns>
 
                     <DataGrid.RowStyle>
