--- a/YingCaiAi/YingCaiAiWin/Views/Pages/TrainingDataPage.xaml
+++ b/YingCaiAi/YingCaiAiWin/Views/Pages/TrainingDataPage.xaml
@@ -36,6 +36,8 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
                 <hc:SearchBar
@@ -84,21 +86,31 @@
                 <Button 
              Grid.Column="5" 
              Content="审核" 
-             Width="100"
+             Width="80"
               Height="40"
              Style="{StaticResource ButtonPrimary}"
              hc:IconElement.Width="16"
              Margin="10,0,12,0"
              Command="{Binding ViewModel.ApproveStatusCommand}" />
                 <Button 
-      Grid.Column="6" 
-      Content="删除" 
-      Width="100"
-       Height="40"
-      Style="{StaticResource ButtonPrimary}"
-      hc:IconElement.Width="16"
-      Margin="10,0,12,0"
-    Command="{Binding ViewModel.DeleteCommand}" />
+                 Grid.Column="6" 
+                 Content="导出训练集" 
+                 ToolTip="默认导出所有已审核数据"
+                 Width="100"
+                  Height="40"
+                 Style="{StaticResource ButtonPrimary}"
+                 hc:IconElement.Width="16"
+                 Margin="10,0,12,0"
+                 Command="{Binding ViewModel.ExportCommand}" />
+                <Button 
+                  Grid.Column="7" 
+                  Content="删除" 
+                  Width="80"
+                   Height="40"
+                  Style="{StaticResource     ButtonDanger }"
+                  hc:IconElement.Width="16"
+                  Margin="10,0,12,0"
+                Command="{Binding ViewModel.DeleteCommand}" />
 
             </Grid>
 
